--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
     { "src": "/meu-ip", "dest": "/api/my-ip.js" },
     { "src": "/gerar-senha", "dest": "/api/generate-password.js" },
     { "src": "/perfis", "dest": "/api/perfis.js" },
-    { "src": "/pixqrcode", "dest": "/api/pixqrcode.js" }
+    { "src": "/pixqrcode", "dest": "/api/pixqrcode.js" },
+    { "src": "/cep", "dest": "/api/cep.js" }
   ]
 }
