--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,7 @@
     { "src": "/netflix-profile", "dest": "/api/perfis.js" },
     { "src": "/pix", "dest": "/api/pixqrcode.js" },
     { "src": "/cep", "dest": "/api/cep.js" },
-    { "src": "/genero", "dest": "/api/identificador_genero/index.js" }
+    { "src": "/genero", "dest": "/api/identificador_genero/index.js" },
+    { "src": "/futebol", "dest": "/api/futebol.js" }
   ]
 }
