--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "apiutilities",
   "version": "1.0.0",
   "dependencies": {
+    "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
     "qrcode": "^1.5.1"
   }
 }
