--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "version": 2,
+  "builds": [
+    { "src": "api/*.js", "use": "@vercel/node" }
+  ],
   "routes": [
     { "src": "/meu-ip", "dest": "/api/my-ip.js" },
     { "src": "/gerar-senha", "dest": "/api/generate-password.js" },
@@ -8,6 +11,7 @@
     { "src": "/cep", "dest": "/api/cep.js" },
     { "src": "/genero", "dest": "/api/identificador_genero/index.js" },
     { "src": "/futebol", "dest": "/api/futebol.js" },
-    { "src": "/conversor", "dest": "/api/conversor.js" }
+    { "src": "/conversor", "dest": "/api/conversor.js" },
+    { "src": "/api/(.*)", "dest": "/api/$1.js" }
   ]
 }
