--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/*.js", "use": "@vercel/node" }
+    { "src": "api/*.js", "use": "@vercel/node" },
+    { "src": "index.html", "use": "@vercel/static" },
+    { "src": "Pix.html", "use": "@vercel/static" }
   ],
   "routes": [
     { "src": "/meu-ip", "dest": "/api/my-ip.js" },
@@ -12,6 +14,7 @@
     { "src": "/genero", "dest": "/api/identificador_genero/index.js" },
     { "src": "/futebol", "dest": "/api/futebol.js" },
     { "src": "/conversor", "dest": "/api/conversor.js" },
-    { "src": "/api/(.*)", "dest": "/api/$1.js" }
+    { "src": "/api/(.*)", "dest": "/api/$1.js" },
+    { "handle": "filesystem" }
   ]
 }
