--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,8 @@
     { "src": "/genero", "dest": "/api/identificador_genero/index.js" },
     { "src": "/futebol", "dest": "/api/futebol.js" },
     { "src": "/conversor", "dest": "/api/conversor.js" },
-    { "src": "/api/(.*)", "dest": "/api/$1.js" },
+    { "src": "/api/(.*)", "dest": "/api/hello.js" },
+    { "src": "/lib/(.*)", "dest": "/lib/cors.js" },
     { "handle": "filesystem" }
   ]
 }
