--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
     { "src": "/genero", "dest": "/api/identificador_genero/index.js" },
     { "src": "/futebol", "dest": "/api/futebol.js" },
     { "src": "/conversor", "dest": "/api/conversor.js" },
-    { "src": "/api/(.*)", "dest": "/api/hello.js" }
+    { "src": "/api/(.*)", "dest": "/api/cors.js" }
     { "handle": "filesystem" }
   ]
 }
